fix: tests due to backend changes